# Go1_FollowMeForWalk

./: INFO.txt  README.md  README.txt  go1_install.bash
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
go1_arm_ikfast_plugin/: CMakeLists.txt  go1_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
go1_arm_ikfast_plugin/src/: go1_arm_ikfast_moveit_plugin.cpp  go1_arm_ikfast_solver.cpp
go1_base/: CMakeLists.txt
go1_base/src/: base.cpp
go1_bringup/config/: setup.bash
go1_bringup/launch/: bringup.launch  mmp_bringup.launch  sim_bringup.launch  slam_bringup.launch  thesis_bringup.launch
go1_camera/: CMakeLists.txt  package.xml
go1_camera/include/: StereoCameraCommon.hpp
go1_camera/launch/: cameras_13.launch  cameras_14.launch  cameras_15.launch
go1_camera/src/: camera_node.cpp
go1_control/config/: odom_localization_config_ns.yaml
go1_control/launch/: ekf_localization_ns.launch  open_manipulator.launch  teleop.launch
go1_demo/: CMakeLists.txt  package.xml
go1_demo/scripts/: demo.py
go1_description/launch/: description.launch  go1_rviz.launch
go1_description/urdf/: go1.urdf  go1_robotis.urdf  go1_robotis_visualstudio.urdf
go1_description/xacro/: accessories.urdf.xacro  robot.xacro
go1_gazebo/: CMakeLists.txt  README.md  config.json  package.xml
go1_gazebo/launch/: bringup.launch  gazebo.launch  navigate.launch  (+3 more)
go1_legged_msgs/: CMakeLists.txt
go1_lidars/: CMakeLists.txt  package.xml
go1_lidars/config/: rs_config.yaml
go1_lidars/launch/: lidars.launch
go1_lidars/launch/include/: rs_lidar.xml
go1_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+102 files in other folders)
